--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "commit": "git add .; git commit -m \"<message>\""
+    "git": "git add . && git commit -m"
   },
   "eslintConfig": {
     "extends": [
