--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git": "git add . && git commit -m \"$npm_package_config_issue$npm_config_msg\" && git push",
+    "git": "git add . && git commit -m '$npm_package_config_issue$npm_config_msg' && git push",
     "tester": "echo \"$npm_package_config_issue$npm_config_msg\""
   },
   "eslintConfig": {
