--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git": "git add . && git commit -m '$npm_package_config_issue$npm_config_msg' && git push",
-    "tester": "echo \"$npm_package_config_issue$npm_config_msg\""
+    "git": "git add . && git commit -m '$npm_package_config_issue'",
+    "tester": "echo \"$npm_package_config_issue --msg\""
   },
   "eslintConfig": {
     "extends": [
