--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git": "func() { git add . && git commit -m \"$npm_package_config_issue $1\"; git push; }; func"
+    "git": "func() { git add . && git commit -m \"$npm_package_config_issue $~1\"; git push; }; func"
   },
   "eslintConfig": {
     "extends": [
