--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "git": "func() { git add . && git commit -m \"$npm_package_config_issue $1\"; git push; }; func"
+    "git": "func() { npx eslint . --ext .js,.jsx,.ts,.tsx --fix && git add . && git commit -m \"$npm_package_config_issue $1\"; git push; }; func"
   },
   "eslintConfig": {
     "extends": [
