--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
-    "git": "func() { npm run lint:fix && git add . && git commit -m \"$npm_package_config_issue $1\"; git push; }; func"
+    "git": "func() { npm run lint:fix && npm test && git add . && git commit -m \"$npm_package_config_issue $1\"; git push; }; func"
   },
   "browserslist": {
     "production": [
